--- a/vc10/RoyalSocietyRG.vcxproj
+++ b/vc10/RoyalSocietyRG.vcxproj
@@ -47,7 +47,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\include;..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\boost</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\cinder\cinder_0.8.4_vc2010\boost;C:\cinder\cinder_0.8.4_vc2010\include;..\include;..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\boost</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -58,11 +58,11 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <ResourceCompile>
-      <AdditionalIncludeDirectories>..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>c:\cinder\cinder_0.8.4_vc2010\include;..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include;..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>cinder_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib;..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib\msw;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\cinder\cinder_0.8.4_vc2010\lib\msw;C:\cinder\cinder_0.8.4_vc2010\lib;..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib;..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\lib\msw;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
@@ -104,20 +104,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\RoyalSocietyRGApp.cpp" />
-    <ClCompile Include="List.cpp" />
-    <ClCompile Include="Node.cpp" />
-    <ClCompile Include="rectangle.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\..\cinder\cinder_0.8.4_vc2010\cinder_0.8.4_vc2010\include\cinder\rect.h" />
-    <ClInclude Include="..\include\Resources.h" />
-    <ClInclude Include="List.h" />
-    <ClInclude Include="Node.h" />
-    <ClInclude Include="rectangle.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ResourceCompile Include="Resources.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\include\List.h" />
+    <ClInclude Include="..\include\Node.h" />
+    <ClInclude Include="..\include\rectangle.h" />
+    <ClInclude Include="..\include\Resources.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\src\List.cpp" />
+    <ClCompile Include="..\src\Node.cpp" />
+    <ClCompile Include="..\src\rectangle.cpp" />
+    <ClCompile Include="..\src\RoyalSocietyRGApp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
